Fix gap on buttons

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -22,7 +22,7 @@ body {
 .links {
   display: flex;
   gap: 15px;
-  margin: 10px;
+  margin: 15px;
 }
 
 .footer {
@@ -45,7 +45,7 @@ img {
 .buttons {
   display: flex;
   justify-content: center;
-  gap: 30px;
+  gap: 10px;
   margin-top: 20px;
 }
 
